Changed database from SQL to NoSql with mongoose. Also finished case of use for Usuario

--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "@types/mongoose": "^5.7.15",
     "@types/mysql": "^2.15.10",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.12",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0"
   }
