--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
         "**/*.test.ts"
     ],
     "include": [
-        "src/**/*.ts", "src/middlewares/database.js"
+        "src/**/*.ts", "src/middlewares/database.ts"
     ]
 }
