--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/crypto-js": "^3.1.45",
     "@types/express": "^4.17.6",
     "@types/jsonwebtoken": "^8.3.9",
     "@types/mongoose": "^5.7.15",
     "@types/mongoose-unique-validator": "^1.0.4",
+    "@types/nodemailer": "^6.4.0",
     "nodemon": "^2.0.3",
     "ts-node": "^8.9.1",
     "tslint": "^6.1.2",
@@ -24,6 +26,7 @@
   "dependencies": {
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
+    "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.4.1",
@@ -31,6 +34,7 @@
     "mongoose": "^5.9.12",
     "mongoose-unique-validator": "^2.0.3",
     "mysql": "^2.18.1",
-    "mysql2": "^2.1.0"
+    "mysql2": "^2.1.0",
+    "nodemailer": "^6.4.6"
   }
 }
