--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/mongoose": "^5.7.15",
     "@types/mongoose-unique-validator": "^1.0.4",
     "@types/nodemailer": "^6.4.0",
+    "moment": "^2.25.3",
     "nodemon": "^2.0.3",
     "ts-node": "^8.9.1",
     "tslint": "^6.1.2",
